test/invalid-semantics/60294_const_not_computable/const_not_computable.mag
-- Author: 60294, Pedro Rosa
fun getFive(_): Unit -> Int = 5
const five: Int = getFive(unit)